Bug 70293 - FILESAVE XLSX Grouping of shapes is lost on export
Summary: FILESAVE XLSX Grouping of shapes is lost on export
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Tibor Nagy (NISZ)
URL:
Whiteboard: BSA target:7.5.0 target:7.4.4
Keywords:
Depends on:
Blocks: XLSX-Shapes
  Show dependency treegraph
 
Reported: 2013-10-08 19:14 UTC by owezahra
Modified: 2022-11-29 09:18 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Screencaps (80.44 KB, image/jpeg)
2013-10-08 19:14 UTC, owezahra
Details
where error occurs (24.05 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2013-10-14 21:35 UTC, owezahra
Details
another xls (44.00 KB, application/vnd.ms-excel)
2013-10-14 21:37 UTC, owezahra
Details
Minimized document about the disappearing border (10.73 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-06-02 12:23 UTC, NISZ LibreOffice Team
Details
The example file saved with Calc (7.46 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-06-02 12:24 UTC, NISZ LibreOffice Team
Details
Screenshot of the example file and its Calc-saved version side by side in Excel and Calc (130.10 KB, image/png)
2020-06-02 12:27 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description owezahra 2013-10-08 19:14:25 UTC
Created attachment 87299 [details]
Screencaps

Problem description: 
When i tried to convert a xlsx file one graphic gets disorted; it's a compound of an image, a text field and an Office2010-AutoForm-Arrow.

Steps to reproduce:
1. Make a xlsx in Office 2010 as i described
2. Open it in Libreoffice and save as different file formats
3. Observe what happens to the AutoForm-Arrow

Current behavior:
gets disorted in different ways, even disappears

Expected behavior:
Stay as it showed up first when opening the xlsx first time

              
Operating System: Windows 8
Version: 4.1.2.3 rc
Comment 1 tommy27 2013-10-09 18:11:10 UTC
please upload a test .xlsx file for those who don't have MS Office.
Comment 2 owezahra 2013-10-09 19:33:24 UTC
(In reply to comment #1)
> please upload a test .xlsx file for those who don't have MS Office.

The problem is: 
I don't use MS Office anymore.

Have to get to another pc first
Comment 3 owezahra 2013-10-14 21:35:48 UTC
Created attachment 87630 [details]
where error occurs

(File Created in MS Excel 2010.)
When saving this file in LibreOffice as different file formats, it behaves strangely.
Reopening the saved file often shows disortions etc.
Comment 4 owezahra 2013-10-14 21:37:03 UTC
Created attachment 87631 [details]
another xls

saveing this file, as ods, for instance, even makes the whole graphic disappear.
Comment 5 tommy27 2013-10-15 01:33:20 UTC
I confirm bug. Any LibO version and OOo 3.3.0 and AOO 4.0.0 are affecter by this bug and result in various degrees of distortion when saving.

set status to NEW and version to INHERITED FROM OOo
adding Calc expert to CC-list.
Comment 6 QA Administrators 2015-10-14 19:56:41 UTC Comment hidden (obsolete)
Comment 7 tommy27 2015-10-14 20:54:39 UTC
(In reply to owezahra from comment #4)
> Created attachment 87631 [details]
> another xls
> 
> saveing this file, as ods, for instance, even makes the whole graphic
> disappear.

still reproducible with LibO 5.1.0.0.alpha1+
Build ID: f830600ece806ec365a4839e79afabe183c5e36d
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-10-06_22:49:09
Locale: it-IT (it_IT)
Comment 8 QA Administrators 2016-11-08 11:11:24 UTC Comment hidden (obsolete)
Comment 9 owezahra 2016-11-08 19:21:20 UTC
Yep, still an issue.
(Changed version from "Windows" to "all", as i've moved to Ubuntu)

Version: 5.2.3.2
Build ID: 1:5.2.3~rc2-0ubuntu1~xenial1
CPU Threads: 2; OS Version: Linux 3.19; UI Render: default; 
Locale: de-AT (en_US.UTF-8); Calc: group
Comment 10 owezahra 2017-02-07 09:47:43 UTC Comment hidden (obsolete)
Comment 11 QA Administrators 2018-02-08 03:35:53 UTC Comment hidden (obsolete)
Comment 12 owezahra 2018-02-08 08:31:10 UTC Comment hidden (obsolete)
Comment 13 Roman Kuznetsov 2019-02-05 14:19:46 UTC
(In reply to owezahra from comment #12)
> Still an issue, 4 years after initial report: ZERO progress on any of the
> file formats
> 
> Any chance someone gets assigned, or is this just another dead-in-the-water
> bug?
> 
> 
> Version: 5.4.4.2
> Build ID: 1:5.4.4~rc2-0ubuntu0.16.04.1~lo1
> CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
> Locale: en-US (en_US.UTF-8); Calc: group

there are over 13000 bugs in status NEW and only 50 active developers that want to eat

still repro for saving to xlsx and xls, but not for saving to ODS.

in

Version: 6.3.0.0.alpha0+
Build ID: ed707a4806a489467c6d9be7d1b787dab94b5f78
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded
Comment 14 NISZ LibreOffice Team 2020-06-02 12:23:41 UTC
Created attachment 161519 [details]
Minimized document about the disappearing border

When saving to xlsx there are several problems:
- The grouped state of the objects is lost
- Text box border has "automatic" color which is lost, also other "custom" colors are lost too.
- The arrow has red color, which is retained (Excel groups this as "basic" color), but its position shifts lower. This may be related to bug #103050

This file contains the text box outlined with some basic and some custom colors.
Comment 15 NISZ LibreOffice Team 2020-06-02 12:24:08 UTC
Created attachment 161520 [details]
The example file saved with Calc
Comment 16 NISZ LibreOffice Team 2020-06-02 12:27:22 UTC
Created attachment 161521 [details]
Screenshot of the example file and its Calc-saved version side by side in Excel and Calc

Import looks good, but export loses the "custom" colors.

Version: 7.1.0.0.alpha0+ (x64)
Build ID: 75eeb423196c1e94a0189b7eccff37aed5765853
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 17 NISZ LibreOffice Team 2020-09-08 06:41:45 UTC
Grouping of shapes is not retained intentionally on xlsx export: 
https://cgit.freedesktop.org/libreoffice/core/commit/?id=c323e601
Comment 18 NISZ LibreOffice Team 2020-09-08 07:38:12 UTC
(In reply to NISZ LibreOffice Team from comment #14)
> When saving to xlsx there are several problems:
> - The grouped state of the objects is lost

Let's keep this bug focusing on this problem. Adjusting title.

> - Text box border has "automatic" color which is lost, also other "custom"
> colors are lost too.

The automatic color text border is the same as bug #77236
The custom colors being lost in Calc (but not in Excel) is bug #136566

> - The arrow has red color, which is retained (Excel groups this as "basic"
> color), but its position shifts lower. This may be related to bug #103050

Position change on save is bug #123613
Comment 19 owezahra 2021-07-21 09:43:27 UTC
Seems mostly fixed (Arrows), however the circle becomes a fat, not tall oval:

- the circle is slightly squeezed on import 
- saving as .ods makes it even "fatter" after reopening
- other formats seem to stay constant



Version: 7.1.4.2 / LibreOffice Community
Build ID: 10(Build:2)
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Ubuntu package version: 1:7.1.4~rc2-0ubuntu0.20.04.1~lo1
Calc: threaded
Comment 20 Commit Notification 2022-11-25 13:02:16 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c4d7b9c3ec6e44b96134fdfb036be7f9fcf39f9d

tdf#70293 XLSX export: fix lost grouping of shapes

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2022-11-28 17:15:11 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/916bf965bf69784da68311040ba5520e58ca8321

tdf#70293 XLSX export: fix lost grouping of shapes

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 NISZ LibreOffice Team 2022-11-29 09:18:14 UTC
Verified in:
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 5b18eebc2c95321ce7e6edf10f4df81557382a48
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded