tdf#70293 XLSX export: fix lost grouping of shapes

SaveDrawingMLObjects() needs to skip all
the grouped objects, including subgroups
of a group to avoid of broken export. Fixing
this and reverting the old workaround
commit c323e60157422ae264e798b9a279a532fe9997af
"ignore the (unsupported ) group customshape when exporting xlsx",
Calc keeps the grouped state of the objects now.

Change-Id: Ic320248a1c646d8adb9ce55bb2e5dcd880c1df6f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143142
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>